Finalisation du module gestion des utilisateurs